fix Note icon alignment in sidebar, fixes #9018 (#9019)

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -501,6 +501,7 @@ button.disabled .icon.operation use,
 
 .icon-annotation {
     color: #333;
+    vertical-align: baseline;
 }
 
 
